# dev-tool-installer

./: .gitignore  Cargo.toml  README.md  justfile
.github/: dependabot.yaml
.github/workflows/: rust.yml
src/: cli.rs  error.rs  github.rs  lib.rs  main.rs  util.rs
src/config/: mod.rs
src/handler/: mod.rs  tests.rs
src/handler/pkgs/: asset.rs  mod.rs  npm.rs  packages.json
src/pkg/: asset.rs  cargo.rs  golang.rs  manifest.rs  mod.rs  npm.rs  pip.rs  version.rs
src/pkgs/: asset.rs  cargo.rs  go.rs  langservers.rs  linters.rs  misc.rs  mod.rs  npm.rs  packages.json  pip.rs
