[package]
name = "devtoolinstaller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dti"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
flate2 = "1.0.28"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.110"
tar = "0.4.38"
toml = "0.8"
zip = "0.6.4"
crossterm = "0.27"
which = "5"

[dev-dependencies]
tempfile = "3"
