[package]
name = "devtoolinstaller"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "dti"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
directories = "5"
flate2 = "1.0.30"
lazy_static = "1.4.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4.38"
toml = "0.8"
zip = "1.1.4"
crossterm = "0.27"
which = "6"
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3"
